# oido-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
.zcode/plans/: plan-sess_2ed2d5ac-8b76-432e-8cb9-68d36ef83a96.md  plan-sess_4f84e5e6-4a72-4e91-82b7-d57de9adc121.md  plan-sess_5d48ec4f-216e-438c-99a8-76764df8c463.md  plan-sess_6a34f1a1-58c1-45b2-8bdf-d7b6c0e9cc2f.md  plan-sess_7a3891e0-1e4e-4b2e-9446-5aabd7bbc0d1.md  plan-sess_9e9c0aee-5a15-4bd1-9e50-d184384eb484.md  plan-sess_b0db6da1-562b-4d6c-8b02-a6ab8c09e1cc.md  plan-sess_b8c8c7d6-dba0-4418-a6c4-8f1526a0e25d.md  plan-sess_c0d66f7d-1a80-4dd3-ac16-2779b840f63d.md  plan-sess_cd8eccfb-9085-4b51-8839-8292b16fac15.md  plan-sess_dd77a6a0-c7b0-4ee3-b84f-62bb81c1de9f.md
crates/oido/: Cargo.toml
crates/oido-audio/: Cargo.toml
crates/oido-audio/examples/: mic_check.rs
crates/oido-audio/src/: capture.rs  lib.rs
crates/oido-config/: Cargo.toml
crates/oido-config/src/: lib.rs
crates/oido-core/: Cargo.toml
crates/oido-core/examples/: repg_debug.rs
crates/oido-core/src/: chunked_pipeline.rs  debug_dump.rs  dedup.rs  lib.rs  phrase_filter.rs  pipeline.rs  streaming_pipeline.rs
crates/oido-core/tests/: chunked_e2e.rs  chunked_real_audio.rs  pipeline_e2e.rs  streaming_e2e.rs
crates/oido-hotkey/: Cargo.toml
crates/oido-hotkey/src/: gate.rs  hotkey.rs  key_grab.rs  lib.rs
crates/oido-input/: Cargo.toml
crates/oido-input/src/: injector.rs  lib.rs  smart.rs
crates/oido-input/src/direct/: mod.rs  stub.rs  windows.rs
crates/oido-models/: Cargo.toml
crates/oido-models/src/: lib.rs
crates/oido-platform/: Cargo.toml
crates/oido-platform/src/: capture.rs  dialog.rs  gate.rs  hotkey.rs  icon.rs  injector.rs  key_grab.rs  lib.rs  linux.rs  macos.rs  traits.rs  tray.rs  windows.rs
crates/oido-platform/src/tray/: popup.rs  sections.rs
crates/oido-stt/: Cargo.toml
crates/oido-stt/examples/: stt_bench.rs
crates/oido-stt/src/: lib.rs  streaming.rs  whisper_cpp.rs
crates/oido-tray/: Cargo.toml
crates/oido-tray/src/: dialog.rs  dpi.rs  lib.rs  traits.rs  tray.rs  win_helper.rs
crates/oido-tray/src/tray/: i18n.rs  popup_window.rs  sections.rs
crates/oido-updater/: Cargo.toml
crates/oido-updater/src/: inner.rs  lib.rs
crates/oido/src/: cli.rs  control.rs  diagnostics.rs  hotkey_setup.rs  main.rs  model_lifecycle.rs  models_setup.rs  runtime.rs  updater.rs
installer/: README.md  build-msi.ps1  oido.wxs  updater-pubkey.pem  updater-pubkey.txt
openspec/changes/Streaming STT con LocalAgreement-2 + dictado en vivo/: verify-report.md
plans/: PLAN.md
scripts/: cargo-msvc.bat  download_model.ps1  download_model.sh  download_vad.ps1  download_vad.sh
