[workspace]
resolver = "2"
members = [
    "crates/oido-core",
    "crates/oido-stt",
    "crates/oido-audio",
    "crates/oido-hotkey",
    "crates/oido-input",
    "crates/oido-tray",
    "crates/oido-updater",
    "crates/oido-config",
    "crates/oido-models",
    "crates/oido",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Santirrini/oido-rs"
authors = ["Jose Diaz"]
description = "Local-first cross-platform voice dictation, rewrite of Oido in Rust."

[workspace.dependencies]
# Foundation deps the entire workspace shares. Per-crate Cargo.toml re-uses
# these via `dep.workspace = true`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
dirs = "5"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Dev-only: property-based testing (config roundtrip, etc.).
proptest = "1"
# Ctrl+C cross-platform (Windows: SetConsoleCtrlHandler, Unix: signal).
ctrlc = "3"

# HTTP client para descarga de modelos desde HuggingFace.
# `default-features = false` evita OpenSSL/Schannel nativo; `rustls` es
# puro Rust. `blocking` permite descargar desde un thread dedicado sin
# levantar un runtime async.
# Pinned a 0.13 para alinear con `self_update 0.44` (su misma versión
# mayor). Mantener reqwest a una sola mayor en el workspace evita
# duplicar todo el stack HTTP/TLS (hyper, rustls, tokio-rustls, etc.)
# en `Cargo.lock`. NB: en 0.13 la feature `rustls-tls` se renombró a `rustls`.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "blocking"] }
# SHA-256 para verificar integridad de los `.bin` descargados.
sha2 = "0.10"
# Encoding hex para serializar el digest de SHA256.
hex = "0.4"
# Mock HTTP server para tests de descarga en `oido-models`.
httpmock = "0.7"

# CLI argument parsing.
clap = { version = "4", features = ["derive", "wrap_help"] }

# Native tray menus (Windows + macOS); Linux usa ksni directamente.
muda = "0.15"

# Detección de tema oscuro/claro del SO (Win/Mac/Linux).
dark-light = "1"

# Abrir directorios/URLs en el explorador/browser del OS.
open = "5"

# Fase 1: native SDK crates. Pinned a majors actuales (cargo resolver
# elige parche mayor). Si una versión mayor causa rotura, fijar y
# comentar abajo.
cpal = "0.18"
global-hotkey = "0.8"
# Captura global de teclado a nivel OS (event-driven, distingue
# modificadores robustamente). Usado por `oido --set-hotkey` para que el
# usuario "grabe" interactivamente la tecla de activación.
rdev = "0.5"
tray-icon = "0.24"
ksni = "0.3"
arboard = "3"
enigo = "0.6"
whisper-rs = "0.16"
# Resampling de audio (CpalCapture puede recibir audio a 44.1/48kHz y
# debe entregar 16kHz mono a whisper.cpp).
rubato = "0.15"

# Stage lock: every member inherits MSRV pinned via workspace.package above.

[workspace.lints.rust]
# Regla R2: FFI aislado. Solo `oido-stt` y `oido-platform` (este último
# para DPI + popup GDI) declaran `unsafe_code = "allow"` en su propio
# `[lints]`. Todo el código `unsafe` en esos crates vive dentro de
# archivos marcados explícitamente con `#![allow(unsafe_code)]` para
# que sea trivial auditar FFI con un grep. CI revisa que ningún otro
# archivo tenga `unsafe` accidental.
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
module_name_repetitions = "allow"
must_use_candidate = "allow"

# `clippy::pedantic` y `clippy::all` se activan como DENY solo en CI
# (ver `.github/workflows/ci.yml`). En build local son warn informativo
# para no bloquear a contribuidores por nits estilísticos.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0

# -------------------------------------------------------------------
# Security override: bump transitiva de quick-xml a >= 0.41
#
# `self_update 0.44` arrastra `quick-xml 0.38.4` como dependencia
# transitiva. La 0.38.4 tiene RUSTSEC-2026-0194/0195 (OOM DoS en
# `NamespaceResolver::push` al parsear tags con muchas declaraciones
# de namespace). El fix upstream está en `quick-xml >= 0.41.0`, pero
# `self_update` aún no subió su requisito mínimo.
#
# La mitigación es no usar NsReader (el código afectado), sólo el
# `Reader` plano. self_update 0.44 parsea GitHub Releases con
# `serde_json`, no con `quick-xml` (verificado en github.rs), por lo
# que **no estamos expuestos** en la práctica. Aún así, mantenemos
# el dep en 0.41+ via `cargo update -p quick-xml --precise 0.41.0`
# (ver Cargo.lock) y dejamos esta nota para no reintroducir la 0.38
# al regenerar el lock manualmente.
#
# Cuando `self_update > 0.44` suba su requisito, se puede borrar
# esta nota.
# -------------------------------------------------------------------
