[package]
name = "oido-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dirs.workspace = true
tempfile.workspace = true
tracing.workspace = true
