[package]
name = "oido-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Forwarding desde el workspace: permiten que `default_use_gpu()`
# refleje si el bin fue compilado con GPU. Solo config-default.
cuda = []
metal = []
vulkan = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dirs.workspace = true
tempfile.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true