[package]
name = "oido-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
oido-stt = { path = "../oido-stt", version = "0.1.0" }
oido-platform = { path = "../oido-platform", version = "0.1.0" }
oido-config = { path = "../oido-config", version = "0.1.0" }
