[package]
name = "oido-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Catálogo y descarga de modelos whisper.cpp + VAD desde HuggingFace."

[dependencies]
oido-config = { path = "../oido-config" }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
tempfile = { workspace = true }