[package]
name = "oido-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true

# Cross-platform OS abstractions. cpal/global-hotkey/arboard/enigo each
# build on all 3 OS via conditional compilation in their own crates;
# tray-icon covers Win+macOS, ksni covers Linux only.
cpal.workspace = true
global-hotkey.workspace = true
tray-icon.workspace = true
arboard.workspace = true
enigo.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ksni.workspace = true
