[package]
name = "oido-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
oido-config = { path = "../oido-config", version = "0.1.0" }
oido-stt = { path = "../oido-stt", version = "0.1.0" }
dark-light.workspace = true

# Cross-platform OS abstractions. cpal/global-hotkey/arboard/enigo each
# build on all 3 OS via conditional compilation in their own crates.
cpal.workspace = true
global-hotkey.workspace = true
rdev = { workspace = true, features = ["unstable_grab"] }
arboard.workspace = true
enigo.workspace = true
# Resampling sinc-based para dispositivos que no soportan 16 kHz
# nativo (muchos USB mics son 44.1/48 kHz). whisper.cpp requiere 16
# kHz estricto.
rubato.workspace = true

# Tray: tray-icon (Win+macOS) vía AppIndicator/NSStatus; ksni (Linux)
# vía StatusNotifierItem. NO tray-icon en Linux: trae gtk3-rs
# unmaintained (cargo-deny RUSTSEC-2024-0413..0420) y no es necesario
# porque ksni es nativo D-Bus.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon.workspace = true
muda.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ksni.workspace = true
