[package]
name = "oido-stt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Aceleración por GPU. Opt-in porque requiere drivers/toolchain en la
# máquina destino. `GpuConfig::auto_detect()` se basa en estas features
# para decidir el `use_gpu` por defecto.
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]
# Smoke test que requiere modelo .bin en disco.
audio-smoke = []

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
oido-config = { path = "../oido-config", version = "0.1.0" }
dark-light.workspace = true
parking_lot.workspace = true

# Fase 1: whisper-rs enlaza y compila whisper.cpp estáticamente. Build
# pesa bastante (cmake + toolchain C++); ver CI install steps.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
whisper-rs.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_System_Threading"] }