[package]
name = "oido-stt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Aceleración por GPU. Opt-in porque requiere drivers/toolchain en la
# máquina destino. `GpuConfig::auto_detect()` se basa en estas features
# para decidir el `use_gpu` por defecto.
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]
# Smoke test que requiere modelo .bin en disco.
audio-smoke = []

[dependencies]
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
# Para el enum `EffortPreset` y sus setters/valores. Aceptable
# porque `oido-config` no depende de `oido-stt` (solo de serde),
# evitando así circularidad.
oido-config = { path = "../oido-config", version = "0.1.0" }

# Fase 1: whisper-rs enlaza y compila whisper.cpp estáticamente. Build
# pesa bastante (cmake + toolchain C++); ver CI install steps.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
whisper-rs.workspace = true
