[package]
name = "oido"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "oido"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
crossbeam-channel.workspace = true
clap.workspace = true
open.workspace = true
oido-core = { path = "../oido-core", version = "0.1.0" }
oido-config = { path = "../oido-config", version = "0.1.0" }
oido-models = { path = "../oido-models", version = "0.1.0" }
oido-stt = { path = "../oido-stt", version = "0.1.0" }
oido-audio = { path = "../oido-audio", version = "0.1.0" }
oido-hotkey = { path = "../oido-hotkey", version = "0.1.0" }
oido-input = { path = "../oido-input", version = "0.1.0" }
oido-tray = { path = "../oido-tray", version = "0.1.0" }
oido-updater = { path = "../oido-updater", version = "0.1.0", optional = true, default-features = false }

[features]
updater = ["oido-updater/updater", "dep:oido-updater"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }